--- a/src/app/components/top100leaderboard/top100leaderboard.component.html
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.html
@@ -16,6 +16,7 @@
                     </div>
                 </div>
                 <div class="card-body">
+                  <div *ngIf="displayTable">
                   <div class="table-responsive">
                     <table class="table table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions">
                       <thead>
@@ -34,6 +35,7 @@
                       </tbody>
                     </table>
                   </div>
+                </div>
                 </div>
               </div>
             </div>
