added example private league name on the lprivate league model to clarify the expected league name format

--- a/src/app/components/custom-league-modal/custom-league-modal.component.html
+++ b/src/app/components/custom-league-modal/custom-league-modal.component.html
@@ -12,6 +12,8 @@
           <div class="input-group">
             <input [(ngModel)]="leagueName" id="custom-league-name" ngbAutofocus type="text" class="form-control"/>
         </div>
+        <label><i>eg: Kammell Class Reward Race (PL4359)</i></label>
+
       </div>
   </div>
   <div class="modal-footer">
