--- a/src/app/components/custom-league-ladder/custom-league-ladder.component.html
+++ b/src/app/components/custom-league-ladder/custom-league-ladder.component.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
   <!-- <div class="card mx-auto" id="parent-card"> -->
         <div class="row">
-          <div class="col-md-12">
+            <div class="col-sm-2">
+              </div>
+          <div class="col">
               <div *ngIf="displayTable">
             <div class="card mx-auto">
               <div class="card-header text-center">
@@ -39,6 +41,13 @@
               </div>
             </div>
           </div>
+
+        </div>
+
+      </div>
+      <div class="col-sm-2">
         </div>
       </div>
+      </div>
+
 
