--- a/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
+++ b/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
@@ -1,182 +1,190 @@
 <div class="container-fluid">
     <div class="row">
-      <div class="col-md-12">
-        <div class="row">
-          <div class="col">
-            <div class="card" style="width:18%; margin:auto;">
-              <div class="card-header text-center" id="TopTenLadderTitle">Top #5 UberLab Times</div>
+      <div class="col-md-12"></div>
+        <div class="col">
+          <div class="card" style="width:18%; margin:auto;">
+            <div class="card-header text-center" id="Top5LadderTitle">
+              Top #5 Uberlab Times
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="card mx-auto">
-              <div class="card-header text-center">
-                  <div class="row">
-                      <div class="col">
-                      </div>
-                      <div class="col-6">
-                          {{softcore[0].league}}
-                      </div>
-                      <div class="col">
-                          <button type="button" class="btn btn-primary btn-sm float-right"
-                           (click)="onClick(softcore[0].league, softcore[0].leaderboard)">Show Top 100</button>
-                      </div>
-                  </div>
+      </div>
+    <div class="row">
+      <div class="col">
+        <div class="card mx-auto">
+          <div class="card-header text-center">
+            <div class="row">
+              <div class="col"></div>
+              <div class="col">
+                {{ softcore[0].league }}
               </div>
-              <div class="card-body">
-                <div class="table-responsive">
-                  <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
-                    <thead>
-                      <tr>
-                        <th>#</th>
-                        <th>Account</th>
-                        <th>Character</th>
-                        <th>Asc</th>
-                        <th>Time</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let entry of softcore">
-                        <td>{{entry.rank}}</td>
-                        <td>{{entry.account}}</td>
-                        <td>{{entry.character}}</td>
-                        <td>{{entry.ascendancy}}</td>
-                        <td>{{entry.time}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
+              <div class="col">
+                <button type="button" class="btn btn-primary btn-sm float-right"
+                  (click)="onClick(softcore[0].league, softcore[0].leaderboard)">
+                  Show Top 100
+                </button>
               </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="card mx-auto">
-              <div class="card-header text-center">
-                  <div class="row">
-                      <div class="col">
-                      </div>
-                      <div class="col-6">
-                          {{hardcore[0].league}}
-                      </div>
-                      <div class="col">
-                          <button type="button" class="btn btn-primary btn-sm float-right"
-                           (click)="onClick(hardcore[0].league, hardcore[0].leaderboard)">Show Top 100</button>
-                      </div>
-                  </div>
-              </div>
-              <div class="card-body">
-                <div class="table-responsive">
-                  <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
-                    <thead>
-                      <tr>
-                        <th>#</th>
-                        <th>Account</th>
-                        <th>Character</th>
-                        <th>Asc</th>
-                        <th>Time</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let entry of hardcore">
-                        <td>{{entry.rank}}</td>
-                        <td>{{entry.account}}</td>
-                        <td>{{entry.character}}</td>
-                        <td>{{entry.ascendancy}}</td>
-                        <td>{{entry.time}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-striped table-bordered table-sm row-border hover" datatable
+                [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Account</th>
+                    <th>Character</th>
+                    <th>Asc</th>
+                    <th>Time</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let entry of softcore">
+                    <td>{{ entry.rank }}</td>
+                    <td>{{ entry.account }}</td>
+                    <td>{{ entry.character }}</td>
+                    <td>{{ entry.ascendancy }}</td>
+                    <td>{{ entry.time }}</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
-        <div class="row"> </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="card mx-auto">
-              <div class="card-header text-center">
-                <div class="row">
-                  <div class="col">
-                  </div>
-                  <div class="col-6">
-                      {{softcoreSsf[0].league}}
-                  </div>
-                  <div class="col">
-                      <button type="button" class="btn btn-primary btn-sm float-right"
-                       (click)="onClick(softcoreSsf[0].league, softcoreSsf[0].leaderboard)">Show Top 100</button>
-                  </div>
+      </div>
+      <div class="col">
+        <div class="card mx-auto">
+          <div class="card-header text-center">
+            <div class="row">
+              <div class="col"></div>
+              <div class="col-6">
+                {{ hardcore[0].league }}
               </div>
-              </div>
-              <div class="card-body">
-                <div class="table-responsive">
-                  <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
-                    <thead>
-                      <tr>
-                        <th>#</th>
-                        <th>Account</th>
-                        <th>Character</th>
-                        <th>Asc</th>
-                        <th>Time</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let entry of softcoreSsf">
-                        <td>{{entry.rank}}</td>
-                        <td>{{entry.account}}</td>
-                        <td>{{entry.character}}</td>
-                        <td>{{entry.ascendancy}}</td>
-                        <td>{{entry.time}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
+              <div class="col">
+                <button type="button" class="btn btn-primary btn-sm float-right"
+                  (click)="onClick(hardcore[0].league, hardcore[0].leaderboard)">
+                  Show Top 100
+                </button>
               </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="card mx-auto">
-              <div class="card-header text-center">
-                  <div class="row">
-                      <div class="col">
-                      </div>
-                      <div class="col-6">
-                          {{hardcoreSsf[0].league}}
-                      </div>
-                      <div class="col">
-                          <button type="button" class="btn btn-primary btn-sm float-right"
-                           (click)="onClick(hardcoreSsf[0].league, hardcoreSsf[0].leaderboard)">Show Top 100</button>
-                      </div>
-                  </div>
-              </div>
-              <div class="card-body">
-                <div class="table-responsive">
-                  <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
-                    <thead>
-                      <tr>
-                        <th>#</th>
-                        <th>Account</th>
-                        <th>Character</th>
-                        <th>Asc</th>
-                        <th>Time</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let entry of hardcoreSsf">
-                        <td>{{entry.rank}}</td>
-                        <td>{{entry.account}}</td>
-                        <td>{{entry.character}}</td>
-                        <td>{{entry.ascendancy}}</td>
-                        <td>{{entry.time}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-striped table-bordered table-sm row-border hover" datatable
+                [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Account</th>
+                    <th>Character</th>
+                    <th>Asc</th>
+                    <th>Time</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let entry of hardcore">
+                    <td>{{ entry.rank }}</td>
+                    <td>{{ entry.account }}</td>
+                    <td>{{ entry.character }}</td>
+                    <td>{{ entry.ascendancy }}</td>
+                    <td>{{ entry.time }}</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
       </div>
     </div>
-</div>
+  <div class="row"></div>
+  <div class="row">
+    <div class="col">
+      <div class="card mx-auto">
+        <div class="card-header text-center">
+          <div class="row">
+            <div class="col"></div>
+            <div class="col">
+              {{ softcoreSsf[0].league }}
+            </div>
+            <div class="col">
+              <button type="button" class="btn btn-primary btn-sm float-right" (click)="
+                    onClick(softcoreSsf[0].league, softcoreSsf[0].leaderboard)"> Show Top 100 </button>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="table-responsive">
+            <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions"
+              [dtTrigger]="dtTrigger">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Account</th>
+                  <th>Character</th>
+                  <th>Asc</th>
+                  <th>Time</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let entry of softcoreSsf">
+                  <td>{{ entry.rank }}</td>
+                  <td>{{ entry.account }}</td>
+                  <td>{{ entry.character }}</td>
+                  <td>{{ entry.ascendancy }}</td>
+                  <td>{{ entry.time }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card mx-auto">
+        <div class="card-header text-center">
+          <div class="row">
+            <div class="col"></div>
+            <div class="col">
+              {{ hardcoreSsf[0].league }}
+            </div>
+            <div class="col">
+              <button type="button" class="btn btn-primary btn-sm float-right" (click)="
+                    onClick(hardcoreSsf[0].league, hardcoreSsf[0].leaderboard)
+                  ">
+                Show Top 100
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="table-responsive">
+            <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions"
+              [dtTrigger]="dtTrigger">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Account</th>
+                  <th>Character</th>
+                  <th>Asc</th>
+                  <th>Time</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let entry of hardcoreSsf">
+                  <td>{{ entry.rank }}</td>
+                  <td>{{ entry.account }}</td>
+                  <td>{{ entry.character }}</td>
+                  <td>{{ entry.ascendancy }}</td>
+                  <td>{{ entry.time }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
