--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.html
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.html
@@ -54,49 +54,49 @@
       </div>
     </div>
     <div class="col">
-      <div class="card mx-auto">
-        <div class="card-header text-center">
-          <div class="row">
-            <div class="col"></div>
-            <div class="col-6">
-              {{ hardcore[0].league }}
-            </div>
-            <div class="col">
-              <button type="button" class="btn btn-primary btn-sm float-right"
-                (click)="onClick(hardcore[0].league, hardcore[0].leaderboard)">
-                Show Top 100
-              </button>
+        <div class="card mx-auto">
+          <div class="card-header text-center">
+            <div class="row">
+              <div class="col"></div>
+              <div class="col">
+                {{ softcore[0].league }}
+              </div>
+              <div class="col">
+                <button type="button" class="btn btn-primary btn-sm float-right"
+                  (click)="onClick(softcore[0].league, softcore[0].leaderboard)">
+                  Show Top 100
+                </button>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card-body">
-          <div class="table-responsive">
-            <table class="table table-striped table-bordered table-sm row-border hover" datatable
-              [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Account</th>
-                  <th>Character</th>
-                  <th>Asc</th>
-                  <th>Depth</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let entry of hardcore">
-                  <td>{{ entry.rank }}</td>
-                  <td>{{ entry.account }}</td>
-                  <td>{{ entry.character }}</td>
-                  <td>{{ entry.ascendancy }}</td>
-                  <td>{{ entry.depth }}</td>
-                </tr>
-              </tbody>
-            </table>
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-striped table-bordered table-sm row-border hover" datatable
+                [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Account</th>
+                    <th>Character</th>
+                    <th>Asc</th>
+                    <th>Depth</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let entry of softcore">
+                    <td>{{ entry.rank }}</td>
+                    <td>{{ entry.account }}</td>
+                    <td>{{ entry.character }}</td>
+                    <td>{{ entry.ascendancy }}</td>
+                    <td>{{ entry.depth}}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
+      </div>
 <div class="row"></div>
 <div class="row">
   <div class="col">
