--- a/src/app/components/top100leaderboard/top100leaderboard.component.html
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.html
@@ -1,15 +1,15 @@
 <div class="container-fluid">
     <!-- <div class="card mx-auto" id="parent-card"> -->
-          <div class="row">
-              <div class="col-sm-2">
+          <div class="row justify-content-center">
+              <div class="col">
               </div>
-            <div class="col">
+            <div class="col-6">
               <div class="card mx-auto">
                 <div class="card-header text-center">
                     <div class="row">
                         <div class="col">
                         </div>
-                        <div class="col-6">
+                        <div class="col-md-auto">
                             {{delveLeaderboard[0].leaderboard}} : {{delveLeaderboard[0].league}}
                         </div>
                         <div class="col">
@@ -41,7 +41,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-2">
+            <div class="col">
               </div>
           </div>
         </div>
