--- a/src/app/components/top-five-league-panel/top-five-league-panel.component.css
+++ b/src/app/components/top-five-league-panel/top-five-league-panel.component.css
@@ -34,6 +34,7 @@
 
  .radio-inline {
   margin: 15px;
+  margin-top: 0px;
 }
 
 input[type="radio"] {
@@ -43,6 +44,72 @@ input[type="radio"] {
   cursor: pointer;
   vertical-align: middle;
 }
+
+.col-sm {
+  border: white 1px solid;
+}
+
+
+.col-sm-3 {
+  margin-top: 1em;
+  border: #1c2f35 3px solid;
+  border-radius: 0.75rem;
+}
+
+#toggle {
+  margin-bottom: 1em;
+}
+
+h6 {
+  color: #1c2f35;
+  padding-top: 1em;
+}
+
+.card {
+  margin-top: 1em;
+  width: 100%;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: rgba(51, 51, 51, 0.5);
+  background-clip: border-box;
+  border: 1px solid #1C2F35;
+  border-radius: 0.75rem;
+
+}
+
+.container-fluid {
+width: 70%;
+}
+
+#Top5LadderTitle {
+  border-radius: 0.75rem;
+}
+
+.col-md-12 {
+padding: 1em;
+}
+
+table {
+background-color: black;
+color: white;
+}
+
+thead {
+background-color: #1C2F35;
+color: white;
+}
+
+.card-header {
+border-top-left-radius: 0.75rem;
+border-top-right-radius: 0.75rem;
+background-color: #1C2F35;
+padding: 4px;
+color: white;
+}
+
+
+
 
 
 
