--- a/src/app/components/top-five-league-panel/top-five-league-panel.component.css
+++ b/src/app/components/top-five-league-panel/top-five-league-panel.component.css
@@ -57,7 +57,7 @@ input[type="radio"] {
 }
 
 #toggle {
-  margin-bottom: 1em;
+  margin-bottom: 0px;
 }
 
 h6 {
@@ -71,7 +71,7 @@ h6 {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: rgba(51, 51, 51, 0.5);
+
   background-clip: border-box;
   border: 1px solid #1C2F35;
   border-radius: 0.75rem;
