--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.html
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.html
@@ -145,13 +145,11 @@
       <div class="card-header text-center">
         <div class="row">
           <div class="col"></div>
-          <div class="col">
+          <div class="col-auto">
             {{ hardcoreSsf[0].league }}
           </div>
           <div class="col">
-            <button type="button" class="btn btn-primary btn-sm float-right" (click)="
-                  onClick(hardcoreSsf[0].league, hardcoreSsf[0].leaderboard)
-                ">
+            <button type="button" class="btn btn-primary btn-sm float-right" (click)="onClick(hardcoreSsf[0].league, hardcoreSsf[0].leaderboard)">
               Show Top 100
             </button>
           </div>
