--- a/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
+++ b/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
@@ -145,7 +145,7 @@
         <div class="card-header text-center">
           <div class="row">
             <div class="col"></div>
-            <div class="col">
+            <div class="col-auto">
               {{ hardcoreSsf[0].league }}
             </div>
             <div class="col">
