--- a/src/app/components/custom-league-ladder/custom-league-ladder.component.css
+++ b/src/app/components/custom-league-ladder/custom-league-ladder.component.css
@@ -87,3 +87,38 @@ table.dataTable tbody th, table.dataTable tbody td {
   color: white!important;
 
 }
+
+.progress {
+  margin: 0px;
+  width: 95%;
+  height: .8em;
+  background-color: #999;
+  margin-top: .5em;
+  border: #1C2F35 1px solid;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+	background-color: hsla(0, 0%, 100%, 0);
+}
+
+.table-striped tbody tr:nth-of-type(even) {
+	background-color: hsla(0, 0%, 100%, .03);
+}
+
+.table-bordered {
+  border: 1px solid #111!important;
+
+}
+
+tr {
+  border: 1px solid #111!important;
+  border-bottom: 1px solid #111!important;
+}
+td {
+  border: 1px solid #111!important;
+  border-bottom: 1px solid #111!important;
+}
+th {
+  border: 1px solid #111!important;
+  border-bottom:  1px solid #111!important;
+}
