--- a/src/app/components/custom-league-ladder/custom-league-ladder.component.html
+++ b/src/app/components/custom-league-ladder/custom-league-ladder.component.html
@@ -20,19 +20,32 @@
 
               <div class="card-body">
                 <div class="table-responsive">
-                  <table class="table table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions">
+                  <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions">
                     <thead>
                       <tr>
-                        <th *ngFor="let entry of tableColumns">{{entry.column}}</th>
+                        <th>#</th>
+                        <th>Account</th>
+                        <th>Character</th>
+                        <th>Ascendancy</th>
+                        <th>Level</th>
+                        <th>Level Progress</th>
+                        <th>Experience</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr *ngFor="let entry of leaderboardModels">
+
                         <td>{{entry.rank}}</td>
                         <td>{{entry.account}}</td>
                         <td>{{entry.character}}</td>
                         <td>{{entry.ascendancy}}</td>
-                        <td>{{entry.depth}} {{entry.level}} {{entry.time}}</td>
+                        <td>{{entry.level}}</td>
+                        <td>
+                          <div class="progress">
+                            <div class="progress-bar bg-dark" role="progressbar" [ngStyle]="{ 'width': entry.progress }"> </div>
+                          </div>
+                        </td>
+                        <td>{{entry.experience}}</td>
                       </tr>
                     </tbody>
                   </table>
