--- a/src/app/components/custom-league-ladder/custom-league-ladder.component.html
+++ b/src/app/components/custom-league-ladder/custom-league-ladder.component.html
@@ -1,5 +1,4 @@
 <div class="container-fluid">
-  <!-- <div class="card mx-auto" id="parent-card"> -->
         <div class="row">
             <div class="col-sm-2">
               </div>
@@ -14,10 +13,10 @@
                           {{leaderboardModels[0].league}}
                       </div>
                       <div class="col">
+                          Last Updated : {{this.now.getHours()}}:{{this.now.getMinutes()}}:{{this.now.getSeconds()}}
                       </div>
                   </div>
               </div>
-
               <div class="card-body">
                 <div class="table-responsive">
                   <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions">
@@ -51,17 +50,14 @@
                     </tbody>
                   </table>
                 </div>
-                <div>
-              </div>
+              <div>
             </div>
           </div>
-
-        </div>
-
-      </div>
-      <div class="col-sm-2">
         </div>
       </div>
-      </div>
+    </div>
+    <div class="col-sm-2"></div>
+  </div>
+</div>
 
 
