--- a/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
+++ b/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
@@ -15,7 +15,7 @@
           <div class="card-header text-center">
             <div class="row">
               <div class="col"></div>
-              <div class="col">
+              <div class="col-auto">
                 {{ softcore[0].league }}
               </div>
               <div class="col">
@@ -58,7 +58,7 @@
             <div class="card-header text-center">
               <div class="row">
                 <div class="col"></div>
-                <div class="col">
+                <div class="col-auto">
                   {{ softcore[0].league }}
                 </div>
                 <div class="col">
@@ -104,7 +104,7 @@
         <div class="card-header text-center">
           <div class="row">
             <div class="col"></div>
-            <div class="col">
+            <div class="col-auto">
               {{ softcoreSsf[0].league }}
             </div>
             <div class="col">
