fixed league names on leaderboard tables

--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.html
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.html
@@ -59,7 +59,7 @@
             <div class="row">
               <div class="col"></div>
               <div class="col-auto">
-                {{ softcore[0].league }}
+                {{ hardcore[0].league }}
               </div>
               <div class="col">
                 <button type="button" class="btn btn-primary btn-sm float-right"
