added more datatable styling to leaderboard tables

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
     <!-- <div [ngStyle]="{background: 'url(\'../../images/poe-ladder-background.jpg\)'}"></div> -->
   <div class="container-fluid">
     <app-navbar></app-navbar>
-    <app-top-five-league-panel></app-top-five-league-panel>
+    <!-- <app-top-five-league-panel></app-top-five-league-panel> -->
   </div>
 
   <router-outlet></router-outlet>
