--- a/src/app/components/top100leaderboard/top100leaderboard.component.html
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.html
@@ -12,9 +12,7 @@
                         <div class="col-md-auto">
                             {{delveLeaderboard[0].leaderboard}} : {{delveLeaderboard[0].league}}
                         </div>
-                        <div class="col">
-                            <button type="button" class="btn btn-primary btn-sm float-right">Return to Top #5</button>
-                        </div>
+                        <div class="col"></div>
                     </div>
                 </div>
                 <div class="card-body">
