--- a/src/app/components/custom-league-ladder/custom-league-ladder.component.css
+++ b/src/app/components/custom-league-ladder/custom-league-ladder.component.css
@@ -126,3 +126,22 @@ th {
 .online-icon {
   height: 80%;
 }
+
+.spinner {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  background-color: black!important;
+  color: black!important;
+  height: 6em;
+  width: 6em;
+  margin-top: 4em;
+}
+
+#spinner-col {
+  background-color: black!important;
+  color: black!important;
+}
