--- a/src/app/components/top100leaderboard/top100leaderboard.component.css
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.css
@@ -1,5 +1,5 @@
 .card {
-  margin-top: 2em;
+  margin-top: 2.5em;
   width: 100%;
   flex-direction: column;
   min-width: 0;
@@ -10,6 +10,7 @@
   background-clip: border-box;
   border: 1px solid #1C2F35;
   border-radius: 0.75rem;
+
 
 }
 
@@ -73,7 +74,7 @@ table.dataTable tbody th, table.dataTable tbody td {
 }
 
 .dataTables_filter label {
-	color: white!important;
+	color: white;
 }
 
 .dataTables_length label {
@@ -82,10 +83,65 @@ table.dataTable tbody th, table.dataTable tbody td {
 }
 
 .dataTables_wrapper div.dataTables_filter label {
+
   color: white!important;
 
 }
 
-.dataTables_filter {
-  color: white!important;
+.progress {
+  margin: 0px;
+  width: 95%;
+  height: .8em;
+  background-color: #999;
+  margin-top: .5em;
+  border: #1C2F35 1px solid;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+	background-color: hsla(0, 0%, 100%, 0);
+}
+
+.table-striped tbody tr:nth-of-type(even) {
+	background-color: hsla(0, 0%, 100%, .03);
+}
+
+.table-bordered {
+  border: 1px solid #111!important;
+
+}
+
+tr {
+  border: 1px solid #111!important;
+  border-bottom: 1px solid #111!important;
+}
+td {
+  border: 1px solid #111!important;
+  border-bottom: 1px solid #111!important;
+}
+th {
+  border: 1px solid #111!important;
+  border-bottom:  1px solid #111!important;
+}
+
+.online-icon {
+  height: 80%;
+}
+
+.spinner {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  background-color: black!important;
+  color: black!important;
+  height: 6em;
+  width: 6em;
+  margin-top: 4em;
+}
+
+#spinner-col {
+  background-color: black!important;
+  color: black!important;
 }
