--- a/src/app/components/top100leaderboard/top100leaderboard.component.html
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.html
@@ -1,46 +1,67 @@
 <div class="container-fluid">
-    <!-- <div class="card mx-auto" id="parent-card"> -->
-          <div class="row justify-content-center">
-              <div class="col">
-              </div>
-            <div class="col-6">
+    <div class="row">
+      <div class="col-sm-2">
+      </div>
+      <div class="col">
+            <div *ngIf="displayTable">
               <div class="card mx-auto">
                 <div class="card-header text-center">
                     <div class="row">
                         <div class="col">
                         </div>
-                        <div class="col-md-auto">
-                            {{delveLeaderboard[0].leaderboard}} : {{delveLeaderboard[0].league}}
+                        <div class="col-6">
+                            {{delveLeaderboard[0].league}}
                         </div>
-                        <div class="col"></div>
+                        <div class="col">
+                            Last Updated : {{this.now.getHours()}}:{{this.now.getMinutes()}}:{{this.now.getSeconds()}}
+                        </div>
                     </div>
                 </div>
                 <div class="card-body">
-                  <div *ngIf="displayTable">
                   <div class="table-responsive">
-                    <table class="table table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions">
+                    <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions">
                       <thead>
                         <tr>
-                          <th *ngFor="let entry of tableColumns">{{entry.column}}</th>
+                          <th>&nbsp;#</th>
+                          <th>&nbsp;Account</th>
+                          <th>&nbsp;Character</th>
+                          <th></th>
+                          <th>&nbsp;Ascendancy</th>
+                          <th *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">&nbsp;Level</th>
+                          <th *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">&nbsp;Level Progress</th>
+                          <th *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">&nbsp;Experience</th>
+                          <th *ngIf="delveLeaderboard[0].leaderboard === 'Top Delve Depths'">&nbsp;Depth</th>
+                          <th *ngIf="delveLeaderboard[0].leaderboard === 'Top UberLab Times'">&nbsp;Time</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr *ngFor="let entry of delveLeaderboard">
                           <td>{{entry.rank}}</td>
-                          <td>{{entry.account}}</td>
+                          <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{entry.account}}</td>
                           <td>{{entry.character}}</td>
+                          <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
                           <td>{{entry.ascendancy}}</td>
-                          <td>{{entry.depth}} {{entry.level}} {{entry.time}}</td>
+                          <td *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">&nbsp;{{entry.level}}</td>
+                          <td *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">
+                            <div class="progress">
+                              <div class="progress-bar bg-dark" role="progressbar" [ngStyle]="{ 'width': entry.progress }"> </div>
+                            </div>
+                          </td>
+                          <td *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">&nbsp;{{entry.experience}}</td>
+                          <td *ngIf="delveLeaderboard[0].leaderboard === 'Top Delve Depths'">&nbsp;{{entry.depth}}</td>
+                          <td *ngIf="delveLeaderboard[0].leaderboard === 'Top UberLab Times'">&nbsp;{{entry.time}}</td>
                         </tr>
                       </tbody>
                     </table>
-                  </div>
-                </div>
-                </div>
+                  </div>2
+                <div>
               </div>
             </div>
-            <div class="col">
-              </div>
           </div>
         </div>
+      </div>
+      <div class="col-sm-2"></div>
+    </div>
+  </div>
+
 
