--- a/src/app/components/ladder-group-race/ladder-group-race.component.css
+++ b/src/app/components/ladder-group-race/ladder-group-race.component.css
@@ -1,51 +1,189 @@
 .card {
   margin-top: 1em;
   width: 100%;
-  flex-direction: column;
+
   min-width: 0;
   word-wrap: break-word;
   background-color: rgba(51, 51, 51, 0.5);
   background-clip: border-box;
-  border: 1px solid #1c2f35;
+  border: 1px solid #1C2F35;
   border-radius: 0.75rem;
-}
 
-.container-fluid {
-  width: 70%;
 }
 
 #Top5LadderTitle {
-  border-radius: 0.75rem;
+border-radius: 0.75rem;
+}
+
+.container-fluid {
+width: 75%;
 }
 
 .col-md-12 {
-  padding: 1em;
+padding: 1em;
 }
 
 table {
-  background-color: black;
-  color: white;
+background-color: black;
+color: white;
 }
 
 thead {
-  background-color: #1c2f35;
-  color: white;
+background-color: #1C2F35;
+color: white;
 }
 
 .card-header {
-  border-top-left-radius: 0.75rem;
-  border-top-right-radius: 0.75rem;
-  background-color: #1c2f35;
-  padding: 4px;
-  color: white;
+border-top-left-radius: 0.75rem;
+border-top-right-radius: 0.75rem;
+background-color: #1C2F35;
+padding: 4px;
+color: white;
 }
 
 .btn {
-  background-color: #010e11;
-  border-color: white;
-  float: right;
-  margin-right: 12%;
-  height: 100%;
+background-color: #010e11;
+border-color: white;
+float: right;
+margin-right: 12%;
+height: 100%;
 }
 
+/* .row {
+border: white solid 1px;
+} */
+
+
+.body {
+background-color: black;
+}
+
+
+.col-md-12 {
+padding: 1em;
+}
+
+table {
+background-color: black;
+color: white;
+border-bottom: red;
+}
+
+thead {
+background-color: #1C2F35;
+color: white;
+}
+
+.card-header {
+border-top-left-radius: 0.75rem;
+border-top-right-radius: 0.75rem;
+background-color: #1C2F35;
+padding: 4px;
+color: white;
+}
+
+.card-body {
+
+}
+
+.btn {
+background-color: #010e11;
+border-color: white;
+float: right;
+margin-right: 12%;
+height: 100%;
+}
+
+
+
+/* Start of DataTable Row Styling */
+table.dataTable thead th, table.dataTable thead td {
+padding: 8px 12px;
+border-bottom: 1px solid white;
+height: 1x!important;
+padding: 4px;
+
+
+}
+
+table.dataTable tbody th, table.dataTable tbody td {
+padding: 5px 10px;
+border-bottom: 1px solid white;
+background-color: black;
+color: white;
+
+}
+
+.dataTables_filter label {
+color: white;
+}
+
+.dataTables_length label {
+font-weight: normal;
+display: none;
+}
+
+.dataTables_wrapper div.dataTables_filter label {
+
+color: white!important;
+
+}
+
+.progress {
+margin: 0px;
+width: 95%;
+height: .8em;
+background-color: #999;
+margin-top: .5em;
+border: #1C2F35 1px solid;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+background-color: hsla(0, 0%, 100%, 0);
+}
+
+.table-striped tbody tr:nth-of-type(even) {
+background-color: hsla(0, 0%, 100%, .03);
+}
+
+.table-bordered {
+border: 1px solid #111!important;
+
+}
+
+tr {
+border: 1px solid #111!important;
+border-bottom: 1px solid #111!important;
+}
+td {
+border: 1px solid #111!important;
+border-bottom: 1px solid #111!important;
+}
+th {
+border: 1px solid #111!important;
+border-bottom:  1px solid #111!important;
+}
+
+.online-icon {
+height: 80%;
+}
+
+.spinner {
+position: fixed;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+margin: 0 auto;
+background-color: black!important;
+color: black!important;
+height: 6em;
+width: 6em;
+margin-top: 4em;
+}
+
+#spinner-col {
+background-color: black!important;
+color: black!important;
+}
 
