--- a/src/app/components/ladder-group-race/ladder-group-race.component.html
+++ b/src/app/components/ladder-group-race/ladder-group-race.component.html
@@ -31,22 +31,24 @@
               <table class="table table-striped table-bordered table-sm row-border hover" datatable
                 [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                 <thead>
-                  <tr>
-                    <th>#</th>
-                    <th>Account</th>
-                    <th>Character</th>
-                    <th>Asc</th>
-                    <th>Level</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let entry of softcore">
-                    <td>{{ entry.rank }}</td>
-                    <td>{{ entry.account }}</td>
-                    <td>{{ entry.character }}</td>
-                    <td>{{ entry.ascendancy }}</td>
-                    <td>{{ entry.level}}</td>
-                  </tr>
+                    <tr>
+                        <th>#</th>
+                        <th>Account</th>
+                        <th>Character</th>
+                        <th></th>
+                        <th>Asc</th>
+                        <th>Level</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let entry of hardcore">
+                        <td>{{ entry.rank }}</td>
+                        <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
+                        <td>{{ entry.character }}</td>
+                        <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
+                        <td>{{ entry.ascendancy }}</td>
+                        <td>{{ entry.level}}</td>
+                      </tr>
                 </tbody>
               </table>
             </div>
@@ -78,6 +80,7 @@
                       <th>#</th>
                       <th>Account</th>
                       <th>Character</th>
+                      <th></th>
                       <th>Asc</th>
                       <th>Level</th>
                     </tr>
@@ -85,8 +88,9 @@
                   <tbody>
                     <tr *ngFor="let entry of hardcore">
                       <td>{{ entry.rank }}</td>
-                      <td>{{ entry.account }}</td>
+                      <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
                       <td>{{ entry.character }}</td>
+                      <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
                       <td>{{ entry.ascendancy }}</td>
                       <td>{{ entry.level}}</td>
                     </tr>
@@ -118,22 +122,24 @@
             <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions"
               [dtTrigger]="dtTrigger">
               <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Account</th>
-                  <th>Character</th>
-                  <th>Asc</th>
-                  <th>Level</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let entry of softcoreSsf">
-                  <td>{{ entry.rank }}</td>
-                  <td>{{ entry.account }}</td>
-                  <td>{{ entry.character }}</td>
-                  <td>{{ entry.ascendancy }}</td>
-                  <td>{{ entry.level}}</td>
-                </tr>
+                  <tr>
+                      <th>#</th>
+                      <th>Account</th>
+                      <th>Character</th>
+                      <th></th>
+                      <th>Asc</th>
+                      <th>Level</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let entry of hardcore">
+                      <td>{{ entry.rank }}</td>
+                      <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
+                      <td>{{ entry.character }}</td>
+                      <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
+                      <td>{{ entry.ascendancy }}</td>
+                      <td>{{ entry.level}}</td>
+                    </tr>
               </tbody>
             </table>
           </div>
@@ -162,22 +168,24 @@
             <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions"
               [dtTrigger]="dtTrigger">
               <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Account</th>
-                  <th>Character</th>
-                  <th>Asc</th>
-                  <th>Level</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let entry of hardcoreSsf">
-                  <td>{{ entry.rank }}</td>
-                  <td>{{ entry.account }}</td>
-                  <td>{{ entry.character }}</td>
-                  <td>{{ entry.ascendancy }}</td>
-                  <td>{{ entry.level}}</td>
-                </tr>
+                  <tr>
+                      <th>#</th>
+                      <th>Account</th>
+                      <th>Character</th>
+                      <th></th>
+                      <th>Asc</th>
+                      <th>Level</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let entry of hardcore">
+                      <td>{{ entry.rank }}</td>
+                      <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
+                      <td>{{ entry.character }}</td>
+                      <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
+                      <td>{{ entry.ascendancy }}</td>
+                      <td>{{ entry.level}}</td>
+                    </tr>
               </tbody>
             </table>
           </div>
