--- a/src/app/components/top100leaderboard/top100leaderboard.component.html
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.html
@@ -9,7 +9,7 @@
                     <div class="row">
                         <div class="col">
                         </div>
-                        <div class="col-6">
+                        <div class="col-auto">
                             {{delveLeaderboard[0].league}}
                         </div>
                         <div class="col">
@@ -53,7 +53,7 @@
                         </tr>
                       </tbody>
                     </table>
-                  </div>2
+                  </div>
                 <div>
               </div>
             </div>
