--- a/src/app/components/top100leaderboard/top100leaderboard.component.css
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.css
@@ -145,3 +145,11 @@ th {
   background-color: black!important;
   color: black!important;
 }
+
+.logo {
+  display:block;
+  margin:auto;
+  width: 37px;
+  height: 32px;
+}
+
