fixed last updated time on custom league ladder

--- a/src/app/components/custom-league-ladder/custom-league-ladder.component.html
+++ b/src/app/components/custom-league-ladder/custom-league-ladder.component.html
@@ -13,7 +13,7 @@
                           {{leaderboardModels[0].league}}
                       </div>
                       <div class="col">
-                          Last Updated : {{this.now.getHours()}}:{{this.now.getMinutes()}}:{{this.now.getSeconds()}}
+                          Last Updated : {{now | date:'medium'}}
                       </div>
                   </div>
               </div>
