--- a/src/app/components/custom-league-ladder/custom-league-ladder.component.html
+++ b/src/app/components/custom-league-ladder/custom-league-ladder.component.html
@@ -23,6 +23,7 @@
                     <thead>
                       <tr>
                         <th>&nbsp;#</th>
+                        <th></th>
                         <th>&nbsp;Account</th>
                         <th>&nbsp;Character</th>
                         <th></th>
@@ -35,6 +36,7 @@
                     <tbody>
                       <tr *ngFor="let entry of leaderboardModels">
                         <td>{{entry.rank}}</td>
+                        <td>({{entry.rankDifference}})</td>
                         <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{entry.account}}</td>
                         <td>{{entry.character}}</td>
                         <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
