--- a/src/app/components/ladder-group-race/ladder-group-race.component.html
+++ b/src/app/components/ladder-group-race/ladder-group-race.component.html
@@ -43,7 +43,9 @@
                     <tbody>
                       <tr *ngFor="let entry of softcore">
                         <td>{{ entry.rank }}</td>
-                        <td>({{entry.rankDifference}})</td>
+                        <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
+                        <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
+                        <td *ngIf="entry.rankDifference == '0'"></td> 
                         <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
                         <td>{{ entry.character }}</td>
                         <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
@@ -90,7 +92,9 @@
                   <tbody>
                     <tr *ngFor="let entry of hardcore">
                       <td>{{ entry.rank }}</td>
-                      <td>({{entry.rankDifference}})</td>
+                      <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
+                      <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
+                      <td *ngIf="entry.rankDifference == '0'"></td> 
                       <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
                       <td>{{ entry.character }}</td>
                       <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
@@ -138,7 +142,9 @@
                   <tbody>
                     <tr *ngFor="let entry of softcoreSsf">
                       <td>{{ entry.rank }}</td>
-                      <td>({{entry.rankDifference}})</td>
+                      <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
+                      <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
+                      <td *ngIf="entry.rankDifference == '0'"></td> 
                       <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
                       <td>{{ entry.character }}</td>
                       <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
@@ -186,7 +192,9 @@
                   <tbody>
                     <tr *ngFor="let entry of hardcoreSsf">
                       <td>{{ entry.rank }}</td>
-                      <td>({{entry.rankDifference}})</td>
+                      <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
+                      <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
+                      <td *ngIf="entry.rankDifference == '0'"></td>       
                       <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
                       <td>{{ entry.character }}</td>
                       <td ><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
