--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,8 @@
 .image{
   background-size:cover; width:auto;
-  background-image:url('./images/poe-ladder-background.jpg');
-   width:100%;
+  background-color: black;
+  /* background-image:url('./images/poe-ladder-background.jpg'); */
+  width:100%;
   margin: 0;
   min-height: 100vh;
   background-attachment: fixed;
