--- a/src/app/components/custom-league-ladder/custom-league-ladder.component.css
+++ b/src/app/components/custom-league-ladder/custom-league-ladder.component.css
@@ -10,8 +10,6 @@
   background-clip: border-box;
   border: 1px solid #1C2F35;
   border-radius: 0.75rem;
-
-
 }
 
 .body {
@@ -144,4 +142,22 @@ th {
 #spinner-col {
   background-color: black!important;
   color: black!important;
+}
+
+.arrow-up {
+	border: solid green;
+	border-width: 0 3px 3px 0;
+	display: inline-block;
+	padding: 4px;
+	transform: rotate(-135deg);
+	-webkit-transform: rotate(-135deg);
+}
+
+.arrow-down {
+	border: solid red;
+	border-width: 0 3px 3px 0;
+	display: inline-block;
+	padding: 4px;
+	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
 }
