--- a/src/app/components/custom-league-ladder/custom-league-ladder.component.html
+++ b/src/app/components/custom-league-ladder/custom-league-ladder.component.html
@@ -36,7 +36,9 @@
                     <tbody>
                       <tr *ngFor="let entry of leaderboardModels">
                         <td>{{entry.rank}}</td>
-                        <td>({{entry.rankDifference}})</td>
+                        <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
+                        <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
+                        <td *ngIf="entry.rankDifference == '0'"></td> 
                         <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{entry.account}}</td>
                         <td>{{entry.character}}</td>
                         <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
