--- a/src/app/components/custom-league-modal/custom-league-modal.component.css
+++ b/src/app/components/custom-league-modal/custom-league-modal.component.css
@@ -45,3 +45,21 @@
 .close {
   color: white;
 }
+
+.arrow-up {
+	border: solid green;
+	border-width: 0 3px 3px 0;
+	display: inline-block;
+	padding: 4px;
+	transform: rotate(-135deg);
+	-webkit-transform: rotate(-135deg);
+}
+
+.arrow-down {
+	border: solid red;
+	border-width: 0 3px 3px 0;
+	display: inline-block;
+	padding: 4px;
+	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+}
