--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.css
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.css
@@ -194,3 +194,21 @@ th {
   height: 32px;
 }
 
+.arrow-up {
+	border: solid green;
+	border-width: 0 3px 3px 0;
+	display: inline-block;
+	padding: 4px;
+	transform: rotate(-135deg);
+	-webkit-transform: rotate(-135deg);
+}
+
+.arrow-down {
+	border: solid red;
+	border-width: 0 3px 3px 0;
+	display: inline-block;
+	padding: 4px;
+	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+}
+
