--- a/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.css
+++ b/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.css
@@ -198,3 +198,21 @@ color: black!important;
   height: 32px;
 }
 
+.arrow-up {
+	border: solid green;
+	border-width: 0 3px 3px 0;
+	display: inline-block;
+	padding: 4px;
+	transform: rotate(-135deg);
+	-webkit-transform: rotate(-135deg);
+}
+
+.arrow-down {
+	border: solid red;
+	border-width: 0 3px 3px 0;
+	display: inline-block;
+	padding: 4px;
+	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+}
+
