--- a/src/app/components/top100leaderboard/top100leaderboard.component.html
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.html
@@ -23,6 +23,7 @@
                       <thead>
                         <tr>
                           <th>&nbsp;#</th>
+                          <th>&nbsp;</th>
                           <th>&nbsp;Account</th>
                           <th>&nbsp;Character</th>
                           <th></th>
@@ -37,6 +38,9 @@
                       <tbody>
                         <tr *ngFor="let entry of delveLeaderboard">
                           <td>{{entry.rank}}</td>
+                          <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
+                          <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
+                          <td *ngIf="entry.rankDifference == '0'"></td> 
                           <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{entry.account}}</td>
                           <td>{{entry.character}}</td>
                           <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
