implemented new time formatted variable to replace existing time variable

--- a/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
+++ b/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
@@ -50,7 +50,7 @@
                         <td>{{ entry.character }}</td>
                         <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
                         <td>{{ entry.ascendancy }}</td>
-                        <td>{{ entry.time}}</td>
+                        <td>{{ entry.timeFormatted}}</td>
                       </tr>
                 </tbody>
               </table>
@@ -99,7 +99,7 @@
                           <td>{{ entry.character }}</td>
                           <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
                           <td>{{ entry.ascendancy }}</td>
-                          <td>{{ entry.time}}</td>
+                          <td>{{ entry.timeFormatted}}</td>
                         </tr>
                   </tbody>
                 </table>
@@ -149,7 +149,7 @@
                       <td>{{ entry.character }}</td>
                       <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
                       <td>{{ entry.ascendancy }}</td>
-                      <td>{{ entry.time}}</td>
+                      <td>{{ entry.timeFormatted}}</td>
                     </tr>
               </tbody>
             </table>
@@ -199,7 +199,7 @@
                       <td>{{ entry.character }}</td>
                       <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
                       <td>{{ entry.ascendancy }}</td>
-                      <td>{{ entry.time}}</td>
+                      <td>{{ entry.timeFormatted}}</td>
                     </tr>
               </tbody>
             </table>
