implemented new time formatted variable to replace existing time variable

--- a/src/app/components/top100leaderboard/top100leaderboard.component.html
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.html
@@ -53,7 +53,7 @@
                           </td>
                           <td *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">&nbsp;{{entry.experience}}</td>
                           <td *ngIf="delveLeaderboard[0].leaderboard === 'Top Delve Depths'">&nbsp;{{entry.depth}}</td>
-                          <td *ngIf="delveLeaderboard[0].leaderboard === 'Top UberLab Times'">&nbsp;{{entry.time}}</td>
+                          <td *ngIf="delveLeaderboard[0].leaderboard === 'Top UberLab Times'">&nbsp;{{entry.timeFormatted}}</td>
                         </tr>
                       </tbody>
                     </table>
