added last updated time to top five leaderboards

--- a/src/app/components/custom-league-ladder/custom-league-ladder.component.css
+++ b/src/app/components/custom-league-ladder/custom-league-ladder.component.css
@@ -161,3 +161,10 @@ th {
 	transform: rotate(45deg);
 	-webkit-transform: rotate(45deg);
 }
+
+.lastupdated {
+  padding-top: 1em;
+  font-size: .8em;
+}
+
+
