--- a/src/app/components/ladder-group-race/ladder-group-race.component.html
+++ b/src/app/components/ladder-group-race/ladder-group-race.component.html
@@ -1,12 +1,14 @@
 <div class="container-fluid">
     <div class="row">
+        <div class="col"></div>
         <div class="col">
-          <div class="card" style="width:18%; margin:auto;">
+            <div class="card" style="margin:auto; width:60%;">
             <div class="card-header text-center" id="Top5LadderTitle">
               Top #5 Race To 100
             </div>
           </div>
         </div>
+        <div class="col text-right lastupdated">Last Updated : {{softcore[0].timeStamp}} &nbsp; &nbsp; &nbsp;</div>
       </div>
     <div class="row">
       <div class="col">
