--- a/src/app/components/custom-league-modal/custom-league-modal.component.css
+++ b/src/app/components/custom-league-modal/custom-league-modal.component.css
@@ -63,3 +63,10 @@
 	transform: rotate(45deg);
 	-webkit-transform: rotate(45deg);
 }
+
+.lastupdated {
+  padding-top: 1em;
+  font-size: .8em;
+}
+
+
