--- a/src/app/components/ladder-group-race/ladder-group-race.component.css
+++ b/src/app/components/ladder-group-race/ladder-group-race.component.css
@@ -208,4 +208,10 @@ color: black!important;
 	-webkit-transform: rotate(45deg);
 }
 
+.lastupdated {
+  padding-top: 1em;
+  font-size: .8em;
+}
+
+
 
